--- a/src/main/webapp/resources/persistence-mysql.properties
+++ b/src/main/webapp/resources/persistence-mysql.properties
@@ -1,7 +1,7 @@
 #
 # JDBC connection properties
 #
-jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false
 jdbc.user=ravi
 jdbc.password=Admin@123
@@ -17,3 +17,5 @@ connection.pool.maxIdleTime=3000
 #Hibernate
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.packagesToScan=edu.neu.CustomerManagement.Entity
+hibernate.show_sql=true
